2.0.2                                       (2012-04-19)

  * Fix a weird wrong DOM-origin bug that occurred while redirects were in
    progress (this might have security implications, although we are unsure
    if it was exploitable).
    https://trac.torproject.org/projects/tor/ticket/5477
  * Ruleset fixes: Debian, Kohls, Malwarebytes, Yandex, Wikipedia, Mises.org, 
                   OpenDNS, Wizards of the Coast, Lenovo, Barnes and Noble
    https://trac.torproject.org/projects/tor/ticket/5509
    https://trac.torproject.org/projects/tor/ticket/5491
    https://trac.torproject.org/projects/tor/ticket/5303
  * Stumble across more horrible security holes in the Verizon website:
    https://mail1.eff.org/pipermail/https-everywhere-rules/2012-February/001003.html
  * Disable the Gentoo ruleset on non-CAcert platforms
  * Disable buggy rulesets: IBM, Scribd, Wunderground :( :( :(
    https://trac.torproject.org/projects/tor/ticket/5344
    https://trac.torproject.org/projects/tor/ticket/5435
    https://trac.torproject.org/projects/tor/ticket/5630
    
  
2.0.1                                       (2012-02-27)
  * 2.0 is now Stable!
  * Fix tiny settings window on some versions of Windows:
    https://trac.torproject.org/projects/tor/ticket/5197
  * Fix drop down menu bug for the non-English versions of the UI
  * Added Farsi and Arabic translations
  * Disable Netflix, which was demonstrating a lot of breakage
  * Improvements: Wikipedia
  * Fixes: Google, Samba
  * Ship 4 new rulesets since 2.0development.6
    (404 new rulesets since 1.2.2!)
  * Check ruleset grammaticity with xmllint/RelaxNG

chrome-2012.02.09
  * make <exclusion pattern> rulesets elements work in the Chrome version
    https://trac.torproject.org/projects/tor/ticket/5042
    (also disable the LinkedIn ruleset)
  * Support for Google Sorry
  * 6 new rulesets

2.0.0development.6                           (2012-02-08)
  * Fix a nasty UI crash bug on Windows