@@ -4,6 +4,10 @@
     progress (this might have security implications, although we are unsure
     if it was exploitable).
     https://trac.torproject.org/projects/tor/ticket/5477
+  * By default, use https://google.co.cctld instead of
+    encrypted.google.com
+  * Add an optional ruleset to use https://www.google.com
+    instead of encrypted.google.com, too
   * Ruleset fixes: Debian, Kohls, Malwarebytes, Yandex, Wikipedia, Mises.org, 
                    OpenDNS, Wizards of the Coast, Lenovo, Barnes and Noble
     https://trac.torproject.org/projects/tor/ticket/5509
